# zonix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: tutorial.zh-CN.md
examples/: real_provider_case.py  single_agent.py  workflow_team.py
scripts/: smoke_real_provider.py
src/zonix/: __init__.py  content.py  engine.py  events.py  exceptions.py  graph.py  hitl.py  obs.py  runtime.py  serialization.py  spec.py  sync.py  tools.py  types.py
src/zonix/memory/: __init__.py
src/zonix/models/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  openai.py
src/zonix/multi/: __init__.py  team.py  workflow.py
src/zonix/wire/: __init__.py  ai_sdk.py
