[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zonix"
version = "0.2.0"
description = "Explicit, serializable AI workflow primitives inspired by pydantic-ai."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zongxi1115", email = "zxwang1234321@gmail.com" }]
keywords = ["ai", "agent", "workflow", "pydantic", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.68"]
anthropic = ["anthropic>=0.45"]
dev = ["ruff>=0.8", "mypy>=1.13"]

[project.urls]
Homepage = "https://github.com/zongxi1115/zonix"
Repository = "https://github.com/zongxi1115/zonix"
Issues = "https://github.com/zongxi1115/zonix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zonix"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["zonix"]
